# SFML-Physics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
src/: collisiongrid.hpp  configuration.hpp  main.cpp  math.hpp  simulation.cpp  solver.cpp  thread_pool.hpp  userinterface.cpp  verlet.hpp
src/Headers/: collisiongrid.hpp  configuration.hpp  math.hpp  thread_pool.hpp  verlet.hpp
src/misc/: collisiongrid.hpp  main(pendulum).txt  verletpendulum.hpp
